--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,22 @@
-.App {
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.divider {
+  padding-block: 0.5rem;
   text-align: center;
+  margin-inline: auto;
+}
+.divider h2 {
+  color: red;
+  padding: 0;
+  margin: 0;
+  margin: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-  border-radius: 50%;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.pp-img {
-  border-radius: 50%;
+input {
+  border-radius: 0.875rem;
+  outline: none;
+  padding: 0.5rem 1.2rem;
 }
