--- a/src/components/counter/styles.css
+++ b/src/components/counter/styles.css
@@ -1,14 +1,21 @@
 .container {
   width: 45vw;
-  border: 1px solid magenta;
   margin: auto;
-  margin-top: 20vh;
+  margin-block: 10px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    padding: 1rem;
+    border-radius: 1rem;
 }
 
 .container>* {
   margin-block: 20px;
+  text-align: center;
 }
 
 button+button {
   margin-left: 20px;
+}
+.label {
+  display: inline-block;
+  margin-bottom: 1rem;
 }
